[EATON-540] Proof Points - Spacing Issues - Mobile- Continued

--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -55,6 +55,9 @@
 
     &__title {
       @include body-copy--desktop;
+      line-height: 3rem;
+      position: relative;
+      top: -5px;
     }
   }
 
